Get rid of Lombok #251