@@ -15,7 +15,6 @@
  */
 package org.springframework.samples.petclinic.api.boundary.web;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.cloud.client.circuitbreaker.ReactiveCircuitBreaker;
 import org.springframework.cloud.client.circuitbreaker.ReactiveCircuitBreakerFactory;
 import org.springframework.samples.petclinic.api.application.CustomersServiceClient;
@@ -28,14 +27,13 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import reactor.core.publisher.Mono;
 
+import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * @author Maciej Szarlinski
  */
 @RestController
-@RequiredArgsConstructor
 @RequestMapping("/api/gateway")
 public class ApiGatewayController {
 
@@ -44,6 +42,14 @@ public class ApiGatewayController {
     private final VisitsServiceClient visitsServiceClient;
 
     private final ReactiveCircuitBreakerFactory cbFactory;
+
+    public ApiGatewayController(CustomersServiceClient customersServiceClient,
+                                VisitsServiceClient visitsServiceClient,
+                                ReactiveCircuitBreakerFactory cbFactory) {
+        this.customersServiceClient = customersServiceClient;
+        this.visitsServiceClient = visitsServiceClient;
+        this.cbFactory = cbFactory;
+    }
 
     @GetMapping(value = "owners/{ownerId}")
     public Mono<OwnerDetails> getOwnerDetails(final @PathVariable int ownerId) {
@@ -61,17 +67,17 @@ public class ApiGatewayController {
 
     private Function<Visits, OwnerDetails> addVisitsToOwner(OwnerDetails owner) {
         return visits -> {
-            owner.getPets()
-                .forEach(pet -> pet.getVisits()
-                    .addAll(visits.getItems().stream()
-                        .filter(v -> v.getPetId() == pet.getId())
-                        .collect(Collectors.toList()))
+            owner.pets()
+                .forEach(pet -> pet.visits()
+                    .addAll(visits.items().stream()
+                        .filter(v -> v.petId() == pet.id())
+                        .toList())
                 );
             return owner;
         };
     }
 
     private Mono<Visits> emptyVisitsForPets() {
-        return Mono.just(new Visits());
+        return Mono.just(new Visits(List.of()));
     }
 }
